<resources>
    <string name="app_name">Study Buddy</string>
    <string name="weclome">Weclome!</string>
    <string name="command_bar_hint">Command or \'help\' …</string>
    <string name="mic_long_press">Click to toggle microphone</string>
    <string name="speaker_long_press">Click to toggle speaker</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="corpora">Corpora</string>
    <string name="undo">Undo</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="import_file">Import File</string>
    <string name="syntax">Syntax</string>
    <string name="get_started">Get Started</string>
    <string name="try_asking_study_buddy_something_like">Try asking Study Buddy something, like:</string>
    <string name="or">Or:</string>
    <string name="sleek_ui">Sleek UI</string>
    <string name="a_beautifully_crafted_and_intuitive_chat_based_ui_where_you_can_choose_to_communicate_through_your_voice_or_your_keyboard_and_hear_or_read_the_ouput">A beautifully crafted and intuitive chat-based UI, where you can choose to communicate through your voice or your keyboard, and hear or read the ouput.</string>
    <string name="ask_me_about">Ask me about</string>
    <string name="my_answer_is">My answer is...</string>
    <string name="what_about">What about ...</string>
    <string name="your_answer_is_wrong_wish_to_try_again_yes_or_no">Your answer is wrong, wish to try again? Yes or no?</string>
    <string name="extensible">Extensible</string>
    <string name="extend_your_study_buddy_s_knowledge_through_easy_to_use_text_files">Expand your Study Buddy\'s knowledge, through easy to use text-files.</string>
    <string name="the_format_is_very_forgiving_each_question_answer_pair_takes_up_a_paragraph_and_study_buddy_will_help_you_out_if_it_finds_any_errors">The format is very forgiving, each question-answer pair takes up a paragraph, and Study Buddy will help you out if it finds any errors.</string>
    <string name="is_this_a_question_nyes_i_m_the_answer_n_nis_this_another_question_nyou_bet_it_is">Is this a question?\nYes! I\'m the answer!\n\nIs this another question?\nYou bet it is!</string>
    <string name="study_buddy_is_a_chatbot_designed_to_help_you_rehearse_your_own_study_material">Study Buddy is a chatbot designed to help you rehearse your own study material.</string>
    <string name="license">License</string>
    <string name="study_buddy_is_free_software_licensed_under_gplv3_you_can_get_the_source_code_from_this_link">Study Buddy is free software, licensed under GPLv3, you can get the source code and full terms of the license at this link: https://github.com/aiman-al-masoud/StudyBuddy.</string>
    <string name="next"><![CDATA[Next ->]]></string>
    <string name="lt_back"><![CDATA[<- Back]]></string>
    <string name="skip_intro">Skip Intro</string>
    <string name="done">Done</string>
    <string name="see_intro">See Intro</string>
    <string name="commands_help">Commands Help</string>
    <string name="about_corpora">About Corpora</string>
    <string name="file_specified_doesnt_exist">The file you specified doesn\'t exist!</string>
    <string name="no_match_found_for_that_topic">No match found for that topic!</string>
    <string name="no_previous_command_to_re_run">No previous command to re-run!</string>
    <string name="heres_documentation">"Here\'s the documentation</string>
    <string name="no_such_command">I didn\'t get you."</string>
    <string name="answer_wrong">Your answer is wrong.</string>
    <string name="wish_to_try_again">Wish to try again? Yes or no?</string>
    <string name="the_correct_answer_is">The correct answer is:</string>
    <string name="you_missed_a_lot">You got close, but you missed a lot of information. Try recalling these keywords:</string>
    <string name="fair_enough" >Fair enough, but you missed these keywords:</string>
    <string name="yes_thats_right">Yes, that\'s right!</string>
    <string name="flawless">Flawless!</string>
    <string name="you_forgot_these_points">You forgot the following points:\n</string>
    <string name="new_file_name">new-file.txt</string>
    <string name="create_new_file">Create New File</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="click_to_create_new_file">Click to create new file.</string>
    <string name="format_error_missing_question_mark">\"Missing \'?\' in paragraph: \"</string>
    <string name="format_error_empty_question">\"Empty question in paragraph: \"</string>
    <string name="format_error_empty_answer">\"Empty answer in paragraph: \"</string>
    <string name="format_error_empty_corpus">Empty corpus!</string>











    <!--  DEFAULT CHALLENGES  -->
    <string name="intro_example_question">Ask me what is speed.</string>>

    <string name="intro_example_question_2">Tell me a joke.</string>

    <string name="default_challenge_file">
        Define speed?\nSpeed is the rate of change of distance with respect to time.\n\n
        Joke: what do you call a chicken who crosses the road, rolls in the mud, and crosses the road again?\nA dirty double crosser.
    </string>

    <!-- END DEFAULT CHALLENGES  -->

    <!--KEYWORDS FOR THE PARSER-->
    <string-array name="tell_me_keywords">
        <item>tell me</item>
    </string-array>

    <string-array name="ask_me_keywords">
        <item>ask me</item>
    </string-array>


    <string-array name="come_again_keywords">
        <item>come again</item>
        <item>repeat</item>
    </string-array>


    <string-array name="another_time_keywords">
        <item>another time</item>
        <item>one more</item>
    </string-array>


    <string-array name="exit_keywords">
        <item>exit</item>
        <item>get me out</item>
    </string-array>

    <string-array name="help_keywords">
        <item>help</item>
    </string-array>

    <string-array name="yes_keywords">
        <item>yes</item>
    </string-array>

    <string-array name="no_keywords">
        <item>no</item>
    </string-array>

    <string-array name="random_keywords">
        <item>random</item>
    </string-array>

    <string-array name="from_keywords">
        <item>from</item>
    </string-array>

    <string-array name="slow_keywords">
        <item>slow</item>
        <item>slower</item>
        <item>slowly</item>
    </string-array>

    <string-array name="i_dont_know_keywords">
        <item>I don\'t know</item>
        <item>no idea</item>
        <item>you tell me</item>
    </string-array>

    <string-array name="what_time_keywords">
        <item>what time</item>
        <item>tell time</item>
    </string-array>


    <!--END KEYWORDS-->



    <!--  COMMAND DOCUMENTATION -->
    <string-array name="doc_ask_me">
        <item>Ask Me</item>
        <item>Use it to trigger a question from Study Buddy.</item>
        <item>ask me \[keywords|random\] from \[filename\]</item>
    </string-array>


    <string-array name="doc_tell_me">
        <item>Tell Me</item>
        <item>Use it to ask Study Buddy to talk about a topic.</item>
        <item>tell me \[keywords|random\] from \[filename\]</item>
    </string-array>

    <string-array name="doc_come_again">
        <item>Come Again</item>
        <item>Prompts study buddy to repeat the question.</item>
        <item>come again | repeat \[slowly\]</item>
    </string-array>

    <string-array name="doc_another_time">
        <item>Another Time</item>
        <item>Prompts study buddy to re-run a Tell Me command with the same arguments.</item>
        <item>another time | one more</item>
    </string-array>

    <string-array name="doc_exit">
        <item>Exit</item>
        <item>Exits the app.</item>
        <item>exit | get me out</item>
    </string-array>


    <string-array name="doc_binary">
        <item>Binary</item>
        <item>Use it when Study Buddy asks a binary question.</item>
        <item>yes|no</item>
    </string-array>


    <string-array name="doc_help">
        <item>Help</item>
        <item>Displays this help page.</item>
        <item>help</item>
    </string-array>


    <string-array name="doc_undefined">
        <item>Undefined</item>
        <item>Doesn\'t do anything.</item>
        <item>N/A</item>
    </string-array>


    <string-array name="doc_i_dont_know">
        <item>I don\'t know</item>
        <item>If given as a reply to an answer, Study Buddy tells you the correct answer right away.</item>
        <item>I don\'t know | No idea | You tell me</item>
    </string-array>

    <string-array name="doc_what_time">
        <item>What Time</item>
        <item>Speaks out the current time of the day.</item>
        <item>What Time | Tell Time</item>
    </string-array>
    <!-- END COMMAND DOCUMENTATION -->

</resources>