<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.about.AboutActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/seeIntroButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/see_intro" />

            <Button
                android:id="@+id/licenseButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/license" />

            <Button
                android:id="@+id/commandsHelpButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/commands_help" />

            <Button
                android:id="@+id/aboutCorporaButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_corpora" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>