<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.intro.IntroActivity">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/introViewPager"
        android:layout_width="match_parent"
        android:layout_height="581dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/introProgress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="176dp"
        android:layout_height="16dp"
        android:layout_marginBottom="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/nextTextView"
        android:layout_width="73dp"
        android:layout_height="29dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/backTextView"
        android:layout_width="73dp"
        android:layout_height="29dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="12dp"
        android:text="@string/lt_back"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/skipIntroTextView"
        android:layout_width="98dp"
        android:layout_height="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="4dp"
        android:text="@string/skip_intro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/doneIntroTextView"
        android:layout_width="67dp"
        android:layout_height="29dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="12dp"
        android:text="@string/done"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>